# louis-work

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.sh  conanfile.txt  install.sh  pyproject.toml
.conan2/profiles/: Linux  Windows  windows-latest
.github/workflows/: release.yml  unit-tests.yml
app/: CMakeLists.txt  louis_work.cxx
cmake/: CodeCoverage.cmake  icons.iss
data/: louis.desktop.in
src/: CMakeLists.txt  command.cpp  command.h  commandfactory.h  component.h  drawstate.cpp  drawstate.h  factory.cpp  factory.h  game.cpp  game.h  gamestate.h  helpers.cpp  helpers.h  logging.h  pathconfig.h  pathconfig.h.in  playstate.cpp  playstate.h  resourceholder.h  scene.cpp  scene.h  service.h  singlelettercommand.cpp  singlelettercommand.h  sound.h  startstate.cpp  startstate.h  state.h  stateholder.cpp  stateholder.h  voice.cpp  voice.h  waitstate.cpp  waitstate.h  window.h  windowstate.h
src/adapters/: CMakeLists.txt  sound.h  window.h
src/commands/: CMakeLists.txt  singlelettercommand.cpp  singlelettercommand.h  soundcommand.cpp  soundcommand.h
src/draw_components/: CMakeLists.txt  louisdraw.cpp  louisdraw.h  singleletterdraw.cpp  singleletterdraw.h  specialdraw.cpp  specialdraw.h  typewriterdraw.cpp  typewriterdraw.h
src/sound_components/: CMakeLists.txt  lettersound.cpp  lettersound.h  louissound.cpp  louissound.h  sirensound.cpp  sirensound.h  specialsound.cpp  specialsound.h
src/states/: CMakeLists.txt  drawstate.cpp  drawstate.h  playstate.cpp  playstate.h  restartstate.cpp  restartstate.h  specialstate.cpp  specialstate.h  startstate.cpp  startstate.h  waitstate.cpp  waitstate.h
test/: CMakeLists.txt  commandfactory_test.cpp  commandfactorytest.cpp  factory_test.cpp  game_restart_test.cpp  game_special_test.cpp  game_test.cpp  helpers_test.cpp  lettersound_test.cpp  main.cpp  mock.h  mockwindow.h  play.cxx  resourcehandler_test.cpp  scenefactory_test.cpp  singleletterdraw_test.cpp  sirensound_test.cpp  specialdraw_test.cpp  specialsound_test.cpp  state_test.cpp  typewriterdraw_test.cpp
